Improve categories and add new post

--- a/_posts/2020-02-07-campaign.md
+++ b/_posts/2020-02-07-campaign.md
@@ -1,9 +1,9 @@
 ---
 title: "Vote for Shane for Town Meeting in the 12th!"
 categories:
-  - Blog
+  - TownMeeting
 tags:
-  - Town-Meeting
+  - Campaign
 ---
 
 Hello!  My name is Shane Curcuru, and I'm running for Town Meeting in the 12th Precinct atop the Heights, because 
