Add useful links and toc

--- a/_posts/2020-02-10-the-2019-warrant.md
+++ b/_posts/2020-02-10-the-2019-warrant.md
@@ -1,5 +1,6 @@
 ---
 title: "Visualizing The 2019 Town Meeting Warrant"
+toc: true
 categories:
   - TownMeeting
 tags:
@@ -13,8 +14,10 @@ serious about doing the research!  My first step was to simply **find**
 all the information about the warrant for our 2019 Town Meeting.  It's 
 simple to find warrant - but not so simple to understand it all.
 
+## What is the Town Warrant?
+
 The warrant is a formal document that describes what matters will be discussed 
-or decided at a Town Meeting.  In days of yore it was likely printed up 
+or decided at a Town Meeting - the agenda, if you will.  In days of yore it was likely printed up 
 and either posted in the local meetinghouse, or delivered via horseback.  
 Today, the warrant is still sent by mail to all households in town - and 
 is also [posted on the town website](https://www.arlingtonma.gov/town-governance/town-meeting/2019-town-meeting-warrant).
@@ -56,20 +59,24 @@ meeting process: those changes are **not** reflected in the article text
 here.  However any posted amendments are noted by title at the head of any
 article, and links are included in the Supplemental Documents at the bottom.
 - All Pass/Fail and vote data is derived from official town spreadsheets 
-that I got via public records request.
+that I got via public records request; they're [transposed to .csv files](https://github.com/ShaneCurcuru/menotomymatters/blob/master/_data/2019warrant-votes.csv).
 - Some comments on Supplemental Documents by Redevelopment or Select Boards are paraphrased 
-from the actual report notes.  For full details, read the linked reports.
+from the actual report notes.  For full details, read the linked reports on the town website.
 
 ## How To Report Corrections
 
 If you've spotted an error or problem, please let me know!  Be sure to 
 also include source links or other documentable proof if there's an error 
-in anything that comes from the town.
+in anything that comes from the town, I'm trying to ensure everything 
+presented about government matters has a clear source.
 
 The best way to submit a specific correction is to propose an edit on 
 any page directly: at the very bottom, find the "Propose change on GitHub"
 link.  Make just the specific correction you're suggesting, and then include 
-linl. detailed comments and justification in the Commit Changes edit boxes.
+detailed comments and justification in the Commit Changes edit boxes.
+
+Note that the data for the article text, crosslinks, votes, and the like are 
+all found in the [underlying _data/*.json files](https://github.com/ShaneCurcuru/menotomymatters/tree/master/_data), not the markdown.
 
 If you don't have a GitHub account, they're free - but then again, if you're 
 not a software type, you probably will just want to email me instead 
