Updates for links, absentee ballots

--- a/_posts/2020-02-07-campaign.md
+++ b/_posts/2020-02-07-campaign.md
@@ -6,16 +6,17 @@ tags:
   - Campaign
 ---
 
-Hello!  My name is Shane Curcuru, and I'm running for Town Meeting in the 12th Precinct atop the Heights, because 
-I want to see more transparency in town government.  If elected to TMM, 
+Hello!  My name is Shane Curcuru, and I'm candidate for Town Meeting in the 12th Precinct atop the Heights, because I want to see more **transparency in town government**.  If elected to TMM, 
 I will publicly blog every issue I research, and try to explain what
-the various warrant articles _actually_ mean.
+the various warrant articles _actually_ mean.  See the 
+[draft 2020 warrant articles now](https://menotomymatters.com/tm/2020draft/) with comments from various boards!
 
 We have a great town, and some great people working for the town and volunteering 
 on various committees.  But it's still to hard to understand what's 
-going on in various meetings or behind the scenes.  My goal is to help Arlingtonians 
+going on in different meetings or behind the scenes.  My goal is to help Arlingtonians 
 find all the source documents behind the committee meeting agendas, and 
-help you understand what they really mean.
+help you understand what they really mean.  An informed citizenry is the 
+most important thing to keep town meeting and democracy working well.
 
 **Remember:** [Town election day is Saturday, April 4th](https://www.arlingtonma.gov/town-governance/elections-voting)!
 Please make sure to vote, no matter what Precinct you're in, since there 
@@ -23,7 +24,13 @@ are several important and competitive Town elections this year.
 Also, I hope if you're in the 12th Precinct, you'll vote for Shane 
 as one of your four choices for Town Meeting!
 
-## Out Of Town Election Day April 4th?
+## Out Of Town Election Day April 4th? Just Want To Vote Absentee?
+
+**UPDATE** The town clerk has noted that anyone can now request an 
+Absentee Ballot - if you do it before the deadline.  You can even fill 
+out, sign, and scan/take a photo of the application, and then 
+[email it into the town clerk](https://www.arlingtonma.gov/Home/Components/BusinessDirectory/BusinessDirectory/35/) to have a ballot mailed to you.  Be sure to 
+allow enough time for it to go through the mail!
 
 No worries - voting an absentee ballot is easy.  You can either get one 
 in person at the Town Clerk's office (second floor, Town Hall), or 
