Update format and add Amazing Agendas post

--- a/_posts/2020-02-07-campaign.md
+++ b/_posts/2020-02-07-campaign.md
@@ -6,10 +6,7 @@ tags:
   - Campaign
 ---
 
-Hello!  My name is Shane Curcuru, and I'm candidate for Town Meeting in the 12th Precinct atop the Heights, because I want to see more **transparency in town government**.  If elected to TMM, 
-I will publicly blog every issue I research, and try to explain what
-the various warrant articles _actually_ mean.  See the 
-[draft 2020 warrant articles now](https://menotomymatters.com/tm/2020draft/) with comments from various boards!
+Hello!  My name is Shane Curcuru, and I'm candidate for Town Meeting in the 12th Precinct atop the Heights, because I want to see more **transparency in town government**.  If elected to TMM, I will publicly blog every issue I research, and try to explain what the various warrant articles _actually_ mean and how various committees work.  See the [draft 2020 warrant articles, annotated](https://menotomymatters.com/tm/2020draft/) and my [Amazing Agendas Meeting Tracker](/meetings/arb/) for some of my work bringing clarity to town government.
 
 We have a great town, and some great people working for the town and volunteering 
 on various committees.  But it's still to hard to understand what's 
@@ -18,23 +15,13 @@ find all the source documents behind the committee meeting agendas, and
 help you understand what they really mean.  An informed citizenry is the 
 most important thing to keep town meeting and democracy working well.
 
-**Remember:** [Town election day is Saturday, April 4th](https://www.arlingtonma.gov/town-governance/elections-voting)!
+**Remember:** [Town election day is Saturday, June 6th](https://www.arlingtonma.gov/town-governance/elections-voting)!
+Stay tuned for an **official town postcard** in mid-May that will have instructions on how to get an Absentee Ballot mailed to you, in case you don't want to go to the polls these days.  Most polling stations are planned to be open; however staffing limitations may mean a handfull of polling places may be moved to other existing polls.
+
 Please make sure to vote, no matter what Precinct you're in, since there 
 are several important and competitive Town elections this year.  
-Also, I hope if you're in the 12th Precinct, you'll vote for Shane 
+Also, I hope if you're in the 12th Precinct, you'll vote for Shane Curcuru
 as one of your four choices for Town Meeting!
-
-## Out Of Town Election Day April 4th? Just Want To Vote Absentee?
-
-**UPDATE** The town clerk has noted that anyone can now request an 
-Absentee Ballot - if you do it before the deadline.  You can even fill 
-out, sign, and scan/take a photo of the application, and then 
-[email it into the town clerk](https://www.arlingtonma.gov/Home/Components/BusinessDirectory/BusinessDirectory/35/) to have a ballot mailed to you.  Be sure to 
-allow enough time for it to go through the mail!
-
-No worries - voting an absentee ballot is easy.  You can either get one 
-in person at the Town Clerk's office (second floor, Town Hall), or 
-mail or scan in your [Absentee Ballot Application](https://www.arlingtonma.gov/home/showdocument?id=49768) to town hall.
 
 ## Have More Questions  ?
 
