Step-by-step instructions

--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -17,29 +17,40 @@ We all know [town elections are postponed until June 6th](https://www.arlingtonm
 
 ## What Is Changing With The June Town Elections?
 
-**FIRST:** check the [Town Clerk's Elections & Voting page for election information](https://www.arlingtonma.gov/town-governance/elections-voting), especially this year, with their [updated 2020 voting information](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome)!  Always _confirm official election information_ with the Town Clerk, or for state elections, with the [MA Secretary of State office](http://www.sec.state.ma.us/ele/elevoterresources.htm).
+**REMEMBER:** check the [Town Clerk's Elections & Voting page for election information](https://www.arlingtonma.gov/town-governance/elections-voting), especially this year, with their [detailed updated 2020 voting information](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome)!  Always _confirm official election information_ with the Town Clerk, or for state elections, with the [MA Secretary of State office](http://www.sec.state.ma.us/ele/elevoterresources.htm).
 
 ## How Do I Vote By Mail?
 
-Due to COVID-19, state regulations have changed allowing any voter to request a vote-by-mail ballot, often called an absentee ballot.  The Town Clerk's office has simplified the process, by [sending every registered voter a postcard](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome) with a prepaid return postcard - you should get your postcard very soon, if not already.  The first step is to is sign the return postcard and send it back **now**.
+Due to COVID-19, [state regulations have changed](https://www.sec.state.ma.us/ele/eleev/evidx.htm) allowing _any voter_ to do "early voting by mail", which is almost identical to the normal absentee ballot.  The Town Clerk's office has simplified the process, by [sending every registered voter a postcard](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome) with a prepaid return postcard - you should get your postcard very soon, if not already.  The first step is to is sign the return postcard and send it back **now**.
 
 <figure style="width: 300px" class="align-right">
   <img src="/assets/images/ballotrequest-202005.jpg" alt="">
   <figcaption>Ballot Request Postcard I Got</figcaption>
 </figure> 
 
-Return your [Arlington Election Commission postcard](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome) **now** to get a vote-by-mail ballot!  You'll need to wait a week or so to get your **official ballot** in the mail, which will have a postage paid return envelope.
+**FIRST:** When you get your Return your [Arlington Election Commission Ballot Request postcard](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome), fill out the fields at the bottom, and sign it.  Then drop it in a normal USPS post box to mail it back to the town clerk.  Do **not** bring it to town hall, you should mail it.
 
-Then, when you get your **actual ballot** (which should look similar to normal ballots), be sure to fill it out and return it **promptly**, to make sure it gets back to the Town Clerk well _before_ the election on 6-June.  You can mail it back (remember to leave time for the mail!) or turn it in by hand to one of the [three "Official Ballot Drop Box" that the Town is setting up](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome) around town.  They are currently scheduled to be setup at:
+**SECOND:** Wait about a week.  Once the Town Clerk gets your request postcard, they will mail you an "early voting by mail" ballot to your registered voter address (unless you specifically listed a different address on your postcard).  That may take several days in the mail, although it's reported the Town Clerk is working fast on sending them out!
 
-- East Arlington: Mass Ave and Lake St (corner by Winter Street)
-- Arlington Center: Town Hall, lower plaza (before front steps)
-- Arlington Heights: Park and Mass Ave (corner by clock)
+**THIRD:** When you get your official ballot in the mail - which should have an official town seal and come from the Arlington Election Commission!, take a breath and _research_ the candidates.  The ballot should look similar to ballots you get in person, but there are a lot of contested races this year!
 
-See a picture of these [new black ballot drop boxes](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2fhome) on the Town Clerk's page.
+- Bob Sprague's [Your Arlington has candidate profiles](https://www.yourarlington.com/arlington-archives/town-school/elections/), debates, letters, and more.
+- Arlington's [League Of Women Voters](http://www.lwva.com) has candidate profiles for most (but not all).
 
-## Polling Place Changes
+**FOURTH:** Fill out the official ballot carefully - it will be difficult to get a replacement.  Remember that some races you get a single vote; some races you get two or more votes.  Double check your votes.
 
-Even with COVID-19, yes, you still can cast a ballot in person!  Current reports show that most polling places will be open on Saturday, June 6th, although a few polls will be moved to other polling locations.  Stay tuned to the [Town Clerk's Elections page](https://www.arlingtonma.gov/town-governance/elections-voting) to see which locations are being moved. 
+**FIFTH:** Carefully put your official ballot into the postpaid envelope that came with it, and then you can **either**:
+
+- Mail it back via the USPS.  Remember to allow for mailing delays; ballots **must** get to the Town Clerk in time to be counted!
+- Drop the ballot _in it's envelope_ into one of the black "Official Ballot Drop Box" boxes setup by the town in three locations:
+  - [Mass Ave & Lake St](https://www.google.com/maps/place/Lake+St,+Massachusetts/@42.4059294,-71.1429,19z/data=!4m5!3m4!1s0x89e377ada6432319:0x309b9b3b79cc12d3!8m2!3d42.402921!4d-71.154176), corner of Winter St (by Town Tavern)
+  - Arlngton Center at CR8V+9F Arlington, Massachusetts
+  - Arlington Heights, [Park Ave & Mass Ave](https://www.google.com/maps/place/Park+Ave,+Arlington,+MA+02476/@42.4242836,-71.1832679,21z/) by the clock
+
+Phew, you're done!  Sorry, I don't know where they'll be handing out I Voted stickers for vote-by-mail!
+
+## Voting In Person - Yes, You Can!
+
+Even with COVID-19, yes, you still can cast a ballot in person on June 6th if you don't vote by mail!  Current reports show that most polling places will be open on Saturday, June 6th, although a few polls will be moved to other polling locations.  Stay tuned to the [Town Clerk's Elections page](https://www.arlingtonma.gov/town-governance/elections-voting) to see which locations are being moved. 
 
 Reminder: [Town Meeting is also be postponed](/townmeeting/town-meeting-during-covid/) until after the election.
