Add photos of boxes and video link

--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -11,9 +11,24 @@ tags:
 header:
   overlay_image: /assets/images/voted.jpg
   caption: "Photo: [**Element 5 Digital / Unsplash**](https://unsplash.com/@element5digital)"
+gallery:
+  - url: /assets/images/20200521_151951.jpg
+    image_path: /assets/images/20200521_151951.jpg
+    alt: "Mass Ave & Lake St. Ballot Box"
+    title: "Mass Ave & Lake St. Ballot Box"
+  - url: /assets/images/20200521_153106.jpg
+    image_path: /assets/images/20200521_153106.jpg
+    alt: "Town Hall Ballot Box"
+    title: "Town Hall Ballot Box"
+  - url: /assets/images/20200521_154329.jpg
+    image_path: /assets/images/20200521_154329.jpg
+    alt: "Mass Ave & Park Ave. Ballot Box"
+    title: "Mass Ave & Park Ave. Ballot Box"
 ---
 
 We all know [town elections are postponed until June 6th](https://www.arlingtonma.gov/elections).  While most polling locations will still be open, there's a lot of interest in how to vote by mail with an absentee ballot this year, and questions about how to so, and what do do with your postcard.
+
+**NEW!** Hear me explain [how to vote this year on ACMi News' latest election video coverage](https://www.facebook.com/acminews/videos/591264048434976/)!
 
 ## What Is Changing With The June Town Elections?
 
@@ -46,6 +61,8 @@ Due to COVID-19, [state regulations have changed](https://www.sec.state.ma.us/el
   - [Mass Ave & Lake St](https://www.google.com/maps/place/Lake+St,+Massachusetts/@42.4059294,-71.1429,19z/data=!4m5!3m4!1s0x89e377ada6432319:0x309b9b3b79cc12d3!8m2!3d42.402921!4d-71.154176), corner of Winter St (by Town Tavern)
   - Arlngton Center at CR8V+9F Arlington, Massachusetts
   - Arlington Heights, [Park Ave & Mass Ave](https://www.google.com/maps/place/Park+Ave,+Arlington,+MA+02476/@42.4242836,-71.1832679,21z/) by the clock
+
+{% include gallery caption="Photos of three black-painted Official Ballot Drop Boxes" %}
 
 Phew, you're done!  Sorry, I don't know where they'll be handing out I Voted stickers for vote-by-mail!
 
