New ballot box locations

--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -26,6 +26,8 @@ gallery:
     title: "Mass Ave & Park Ave. Ballot Box"
 ---
 
+**UPDATE** Two of the ballot boxes have been moved, see new map locations below.
+
 We all know [town elections are postponed until June 6th](https://www.arlingtonma.gov/elections).  While most polling locations will still be open, there's a lot of interest in how to vote by mail with an absentee ballot this year, and questions about how to so, and what do do with your postcard.
 
 **NEW!** Hear me explain [how to vote this year on ACMi News' latest election video coverage](https://www.facebook.com/acminews/videos/591264048434976/)!
@@ -58,11 +60,13 @@ Due to COVID-19, [state regulations have changed](https://www.sec.state.ma.us/el
 
 - Mail it back via the USPS.  Remember to allow for mailing delays; ballots **must** get to the Town Clerk in time to be counted!
 - Drop the ballot _in it's envelope_ into one of the black "Official Ballot Drop Box" boxes setup by the town in three locations:
-  - [Mass Ave & Lake St](https://www.google.com/maps/place/Lake+St,+Massachusetts/@42.4059294,-71.1429,19z/data=!4m5!3m4!1s0x89e377ada6432319:0x309b9b3b79cc12d3!8m2!3d42.402921!4d-71.154176), corner of Winter St (by Town Tavern)
-  - Arlngton Center at CR8V+9F Arlington, Massachusetts
-  - Arlington Heights, [Park Ave & Mass Ave](https://www.google.com/maps/place/Park+Ave,+Arlington,+MA+02476/@42.4242836,-71.1832679,21z/) by the clock
+  - East Arlington, [Fox Library]([CV45+68 Arlington, Massachusetts](https://www.google.com/maps/place/Edith+M+Fox+Library/@42.4055899,-71.143845,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376fe34330bb7:0xd92f150fc174b932!8m2!3d42.405586!4d-71.141651)), 175 Mass. Avenue
+  - [Arlngton Center at Town Hall](https://www.google.com/maps/place/Robbins+Memorial+Town+Hall/@42.4158888,-71.1585642,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376501bc60af3:0xb40dbfbab152d8b1!8m2!3d42.4158849!4d-71.1563702), on the front steps.
+  - Arlington Heights, [ACMI Studio/Dallin Library, 85 Park Avenue](https://www.google.com/maps/place/Arlington+Community+Media+Inc./@42.4238679,-71.185872,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3762456867c57:0x5d268b9dcaa889c9!8m2!3d42.423864!4d-71.183678)
 
 {% include gallery caption="Photos of three black-painted Official Ballot Drop Boxes" %}
+
+**UPDATE** Two Ballot Boxes have just been moved for security reasons; the map links above are the new locations, but the photos are still of the old locations.  I'll try to go out later today to take new pictures! 
 
 Phew, you're done!  Sorry, I don't know where they'll be handing out I Voted stickers for vote-by-mail!
 
