Photo of newly moved ballot box

--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -20,10 +20,10 @@ gallery:
     image_path: /assets/images/20200521_153106.jpg
     alt: "Town Hall Ballot Box"
     title: "Town Hall Ballot Box"
-  - url: /assets/images/20200521_154329.jpg
-    image_path: /assets/images/20200521_154329.jpg
-    alt: "Mass Ave & Park Ave. Ballot Box"
-    title: "Mass Ave & Park Ave. Ballot Box"
+  - url: /assets/images/20200523_144605_sm.jpg
+    image_path: /assets/images/20200523_144605_sm.jpg
+    alt: "ACMI Video on 58 Park Ave. Ballot Box"
+    title: "ACMI Video on 58 Park Ave. Ballot Box"
 ---
 
 **UPDATE** Two of the ballot boxes have been moved, see new map locations below.
@@ -66,7 +66,7 @@ Due to COVID-19, [state regulations have changed](https://www.sec.state.ma.us/el
 
 {% include gallery caption="Photos of three black-painted Official Ballot Drop Boxes" %}
 
-**UPDATE** Two Ballot Boxes have just been moved for security reasons; the map links above are the new locations, but the photos are still of the old locations.  I'll try to go out later today to take new pictures! 
+**UPDATE** Two Ballot Boxes have just been moved for security reasons; the map links above are the **new** locations, and the one of ACMi ata 58 Park is updated, but I haven't updated the East Arlington picture yet.  I'll try to go out soon to take new pictures! 
 
 Phew, you're done!  Sorry, I don't know where they'll be handing out I Voted stickers for vote-by-mail!
 
