Improve campaign pointers

--- a/_posts/2020-02-07-campaign.md
+++ b/_posts/2020-02-07-campaign.md
@@ -6,7 +6,7 @@ tags:
   - Campaign
 ---
 
-Hello!  My name is Shane Curcuru, and I'm candidate for Town Meeting in the 12th Precinct atop the Heights, because I want to see more **transparency in town government**.  If elected to TMM, I will publicly blog every issue I research, and try to explain what the various warrant articles _actually_ mean and how various committees work.  See the [draft 2020 warrant articles, annotated](https://menotomymatters.com/tm/2020draft/) and my [Amazing Agendas Meeting Tracker](/meetings/arb/) for some of my work bringing clarity to town government.
+Hello!  My name is Shane Curcuru, and I'm candidate for Town Meeting in the 12th Precinct atop the Heights, because I want to see more **transparency in town government**.  If elected to TMM, I will publicly blog every issue I research, and try to explain what the various warrant articles _actually_ mean and how various committees work.  See the [draft 2020 warrant articles, annotated](https://menotomymatters.com/tm/2020draft/) and my [Amazing Agendas Meeting Trackers](/meetings/) covering Select Board, ARB, and School Committee meetings, and my [Election 2020 Guide](/townhall/election-guide-2020/) for some of my work bringing clarity to town government.
 
 We have a great town, and some great people working for the town and volunteering 
 on various committees.  But it's still to hard to understand what's 
@@ -16,7 +16,7 @@ help you understand what they really mean.  An informed citizenry is the
 most important thing to keep town meeting and democracy working well.
 
 **Remember:** [Town election day is Saturday, June 6th](https://www.arlingtonma.gov/town-governance/elections-voting)!
-Stay tuned for an **official town postcard** in mid-May that will have instructions on how to get an Absentee Ballot mailed to you, in case you don't want to go to the polls these days.  Most polling stations are planned to be open; however staffing limitations may mean a handfull of polling places may be moved to other existing polls.
+Read my [step-to-step guide for how to vote early by mail](/townhall/election-guide-2020/).  Most polling stations are planned to be open; however staffing limitations may mean a handfull of polling places may be moved to other existing polls.
 
 Please make sure to vote, no matter what Precinct you're in, since there 
 are several important and competitive Town elections this year.  
