Update with new FAQ link

--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -26,7 +26,7 @@ gallery:
     title: "ACMI Video on 58 Park Ave. Ballot Box"
 ---
 
-**UPDATE** Two of the ballot boxes have been moved, see new map locations below.
+**UPDATE** The town has a new [FAQ about voting by mail-in ballots](https://www.arlingtonma.gov/home/showdocument?id=51444) and what happens on election day on the [election news page](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2Fhome).
 
 We all know [town elections are postponed until June 6th](https://www.arlingtonma.gov/elections).  While most polling locations will still be open, there's a lot of interest in how to vote by mail with an absentee ballot this year, and questions about how to so, and what do do with your postcard.
 
@@ -58,7 +58,7 @@ Due to COVID-19, [state regulations have changed](https://www.sec.state.ma.us/el
 
 **FIFTH:** Carefully put your official ballot into the postpaid envelope that came with it, and then you can **either**:
 
-- Mail it back via the USPS.  Remember to allow for mailing delays; ballots **must** get to the Town Clerk in time to be counted!
+- Mail it back via the USPS; use 70cents in stamps to ensure it's not returned (large envelopes cost more).  Remember to allow for mailing delays; ballots **must** get to the Town Clerk in time to be counted!
 - Drop the ballot _in it's envelope_ into one of the black "Official Ballot Drop Box" boxes setup by the town in three locations:
   - East Arlington, [Fox Library]([CV45+68 Arlington, Massachusetts](https://www.google.com/maps/place/Edith+M+Fox+Library/@42.4055899,-71.143845,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376fe34330bb7:0xd92f150fc174b932!8m2!3d42.405586!4d-71.141651)), 175 Mass. Avenue
   - [Arlngton Center at Town Hall](https://www.google.com/maps/place/Robbins+Memorial+Town+Hall/@42.4158888,-71.1585642,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376501bc60af3:0xb40dbfbab152d8b1!8m2!3d42.4158849!4d-71.1563702), on the front steps.
@@ -66,7 +66,7 @@ Due to COVID-19, [state regulations have changed](https://www.sec.state.ma.us/el
 
 {% include gallery caption="Photos of three black-painted Official Ballot Drop Boxes" %}
 
-**UPDATE** Two Ballot Boxes have just been moved for security reasons; the map links above are the **new** locations, and the one of ACMi ata 58 Park is updated, but I haven't updated the East Arlington picture yet.  I'll try to go out soon to take new pictures! 
+**UPDATE** Two Ballot Boxes were moved a week ago for security reasons; the map links above are the **new** locations, and the one of ACMi ata 58 Park is updated, but I haven't updated the East Arlington picture yet.  I'll try to go out soon to take new pictures! 
 
 Phew, you're done!  Sorry, I don't know where they'll be handing out I Voted stickers for vote-by-mail!
 
