--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -26,7 +26,7 @@ gallery:
     title: "ACMI Video on 58 Park Ave. Ballot Box"
 ---
 
-**UPDATE** The town has a new [FAQ about voting by mail-in ballots](https://www.arlingtonma.gov/home/showdocument?id=51444) and what happens on election day on the [election news page](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2Fhome).
+**UPDATE** The town has a new [FAQ about voting by mail-in ballots](https://www.arlingtonma.gov/home/showdocument?id=51444) and what happens on election day on the [election news page](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2Fhome).  I also have a [guide to all major race candidates](/townmeeting/vote-by-mail-2020/).
 
 We all know [town elections are postponed until June 6th](https://www.arlingtonma.gov/elections).  While most polling locations will still be open, there's a lot of interest in how to vote by mail with an absentee ballot this year, and questions about how to so, and what do do with your postcard.
 
