Update voting instructions

--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -56,10 +56,12 @@ Due to COVID-19, [state regulations have changed](https://www.sec.state.ma.us/el
 
 **FOURTH:** Fill out the official ballot carefully - it will be difficult to get a replacement.  Remember that some races you get a single vote; some races you get two or more votes.  Double check your votes.
 
-**FIFTH:** Carefully put your official ballot into the postpaid envelope that came with it, and then you can **either**:
+**FIFTH:** **IMPORTANT** 
 
-- Mail it back via the USPS; use 70cents in stamps to ensure it's not returned (large envelopes cost more).  Remember to allow for mailing delays; ballots **must** get to the Town Clerk in time to be counted!
-- Drop the ballot _in it's envelope_ into one of the black "Official Ballot Drop Box" boxes setup by the town in three locations:
+- Carefully put your official ballot into the **manilla** (brown colored) envelope.  Sign the manilla envelope, then clearly write your name and registered voting address (your street address in Arlington), and seal the envelope.
+- Carefully put the completed **manilla** envelope inside the **white** envelope, and seal it.
+- ~~Mail it back via the USPS; use 70cents in stamps to ensure it's not returned (large envelopes cost more).  Remember to allow for mailing delays; ballots **must** get to the Town Clerk in time to be counted!~~  NOTE: at this late date, it's strongly recommended to put it in a ballot drop box instead!
+- Drop the ballot _in it's double envelopes_ into one of the black "Official Ballot Drop Box" boxes setup by the town in three locations:
   - East Arlington, [Fox Library]([CV45+68 Arlington, Massachusetts](https://www.google.com/maps/place/Edith+M+Fox+Library/@42.4055899,-71.143845,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376fe34330bb7:0xd92f150fc174b932!8m2!3d42.405586!4d-71.141651)), 175 Mass. Avenue
   - [Arlngton Center at Town Hall](https://www.google.com/maps/place/Robbins+Memorial+Town+Hall/@42.4158888,-71.1585642,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376501bc60af3:0xb40dbfbab152d8b1!8m2!3d42.4158849!4d-71.1563702), on the front steps.
   - Arlington Heights, [ACMI Studio/Dallin Library, 85 Park Avenue](https://www.google.com/maps/place/Arlington+Community+Media+Inc./@42.4238679,-71.185872,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3762456867c57:0x5d268b9dcaa889c9!8m2!3d42.423864!4d-71.183678)
