Add updates from new town announcement and clerk's email

--- a/_posts/2020-06-02-vote-in-person-2020.md
+++ b/_posts/2020-06-02-vote-in-person-2020.md
@@ -11,10 +11,17 @@ tags:
 header:
   overlay_image: /assets/images/voted.jpg
   caption: "Photo: [**Element 5 Digital / Unsplash**](https://unsplash.com/@element5digital)"
-
 ---
 
 Didn't get your [vote-by-mail ballot](/townmeeting/vote-by-mail-2020/) in time?  Just prefer to vote in person for the tradition?  Yes, you still can go to the polls - but if you're in Precincts 7, 9, and 20 you will have a **different polling location**. 
+
+**UPDATE** [In-person absentee ballots may be cast](https://www.arlingtonma.gov/Home/Components/News/News/10198/) today and tomorrow, Thurs/Fri, from 1PM - 5PM in the town hall parking lot - wear a mask and cast your vote right there.  If you applied for a mail-in ballot, but haven't gotten it yet, the above Town elections update has important information.
+
+If you **do have a mail-in-ballot**, you can drop it off (after completing it, signing it, and putting in **both** envelopes) in any of the town ballot drop-boxes, or by bringing them to the polls.  All ballots must be in a town drop box or at the polls before 8PM on Saturday.
+
+If you **have a mail-in-ballot that is spoiled** (marked incorrectly), you can do one of two things: 
+- Bring it to the polls Saturday and ask the warden in your precinct to mark it as spoiled, and give you a new ballot to vote in person.
+- Drop it in a town ballot box, where it will be hand counted as a best effort to respect what's on the ballot.
 
 ## Where Should I Vote This Saturday?
 
