Fix and add election guide link

--- a/_posts/2020-06-02-vote-in-person-2020.md
+++ b/_posts/2020-06-02-vote-in-person-2020.md
@@ -13,6 +13,8 @@ header:
   caption: "Photo: [**Element 5 Digital / Unsplash**](https://unsplash.com/@element5digital)"
 ---
 
+Need to research the candidates? Check out my [election guide to all the major races](https://menotomymatters.com/townhall/election-guide-2020/).
+
 Didn't get your [vote-by-mail ballot](/townmeeting/vote-by-mail-2020/) in time?  Just prefer to vote in person for the tradition?  Yes, you still can go to the polls - but if you're in Precincts 7, 9, and 20 you will have a **different polling location**. 
 
 **UPDATE** [In-person absentee ballots may be cast](https://www.arlingtonma.gov/Home/Components/News/News/10198/) today and tomorrow, Thurs/Fri, from 1PM - 5PM in the town hall parking lot - wear a mask and cast your vote right there.  If you applied for a mail-in ballot, but haven't gotten it yet, the above Town elections update has important information.
