Update for election day

--- a/_posts/2020-05-19-vote-by-mail-2020.md
+++ b/_posts/2020-05-19-vote-by-mail-2020.md
@@ -26,6 +26,14 @@ gallery:
     title: "ACMI Video on 58 Park Ave. Ballot Box"
 ---
 
+**It's election day!**  If you have not turned in your completed (and signed/double envelope'd) ballot yet, **do NOT bring it to your local polls**.  You must drop it in one of the three ballot drop boxes, so the Town Clerk can stamp it before bringing it to the correct polling place.  (Confirmed from Precinct 12/14 wardens)
+
+- Drop the ballot _in it's double envelopes_ into one of the black "Official Ballot Drop Box" boxes setup by the town in three locations:
+  - East Arlington, [Fox Library]([CV45+68 Arlington, Massachusetts](https://www.google.com/maps/place/Edith+M+Fox+Library/@42.4055899,-71.143845,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376fe34330bb7:0xd92f150fc174b932!8m2!3d42.405586!4d-71.141651)), 175 Mass. Avenue
+  - [Arlngton Center at Town Hall](https://www.google.com/maps/place/Robbins+Memorial+Town+Hall/@42.4158888,-71.1585642,17z/data=!3m1!4b1!4m5!3m4!1s0x89e376501bc60af3:0xb40dbfbab152d8b1!8m2!3d42.4158849!4d-71.1563702), on the front steps.
+  - Arlington Heights, [ACMI Studio/Dallin Library, 85 Park Avenue](https://www.google.com/maps/place/Arlington+Community+Media+Inc./@42.4238679,-71.185872,17z/data=!3m1!4b1!4m5!3m4!1s0x89e3762456867c57:0x5d268b9dcaa889c9!8m2!3d42.423864!4d-71.183678)
+
+
 **UPDATE** The town has a new [FAQ about voting by mail-in ballots](https://www.arlingtonma.gov/home/showdocument?id=51444) and what happens on election day on the [election news page](https://www.arlingtonma.gov/Home/Components/News/News/10198/16?backlist=%2Fhome).  I also have a [guide to all major race candidates](https://menotomymatters.com/townhall/election-guide-2020/).
 
 We all know [town elections are postponed until June 6th](https://www.arlingtonma.gov/elections).  While most polling locations will still be open, there's a lot of interest in how to vote by mail with an absentee ballot this year, and questions about how to so, and what do do with your postcard.
